<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">"Import from File" Done !</string>
    <string name="app_name">AthgWSms</string>

    <string name="app_title">Anything With Sms</string>
    <string name="home_title">AthgWSms</string>
    <string name="export_title">AthgWSms &gt; Export</string>
    <string name="cs_title">AthgWSms &gt; Formats</string>
    <string name="csedit_title">AthgWSms &gt; Formats &gt; Edit</string>
    <string name="cf_title">AthgWSms &gt; Import</string>
    <string name="cfoifm_title">AthgWSms &gt; Import &gt; OI FM</string>
    <string name="proceed_convert_title">AthgWSms &gt; Import &gt; Working</string>
    <string name="proceed_export_title">AthgWSms &gt; Import &gt; Working</string>
    <string name="done_title">AthgWSms &gt; Import &gt; Done</string>
    <string name="error_title">AthgWSms &gt; Import &gt; Error</string>

    <string name="descr">Import/Export SMS from CSV, VMG Files ! </string>
    <string name="descrexport">Export your SMS to other devices</string>
    <string name="file_name">File Name</string>
    <string name="helpheader">How to convert your SMS messages :</string>
    <string name="failed_retry">Failed ! Retry ?</string>
    <string name="sucessful">Successful</string>
    <string name="path">Path</string>
    <string name="touchonetoeditit">Touch one to edit it.</string>
    <string name="editcsname">Format name : </string>
    <string name="edityourPatterns">Edit your format below :</string>
    <string name="pattern">Global pattern </string>
    <string name="inbox">Inbox keyword</string>
    <string name="sent">Sent keyword</string>
    <string name="export_format">Export format (optional)</string>
    <string name="really_delete">This will delete this format permanently (except for Pre-defined patterns)</string>
    <string name="delete_yes">Delete</string>
    
    <string name="proceed_button">Proceed</string>
    <string name="addone">Add a new format</string>
    <string name="convsets">Change formats</string>
    <string name="convert">Import</string>
    <string name="export">Export</string>
    <string name="validate">Validate</string>
    <string name="delete">Delete</string>
    <string name="filename">Save as</string>
    <string name="selectfile">Choose</string>
    <string name="saveas">Send to &gt;</string>
    <string name="start">Start ></string>
    <string name="again">Again</string>
    <string name="reporterror">Report error</string>
    <string name="cancel">Cancel</string>
    <string name="guessconvset">Guess format</string>
    <string name="backtomainmenu">Back to Main menu</string>
    <string name="great">Great !</string>
    <string name="exit">Exit</string>
    <string name="toggledefaultapp">Default App</string>
    
    <string name="not_default_app">Dear KitKat (or +) user, The Android Platform requires your consent to let AthgWSms become temporarily your default sms app. Please choose \'toggle\' in the main screen.</string>
    <string name="oic">Oh, I see !</string>
    
    <string name="carrier_service">Carrier Service for AthgWSms</string>
    <string name="export_under_android_4">Your Android version is below 4.0. Unable to let you choose between actions. Therefore your export was stored in the file %s</string>
    <string name="problem_while_exporting">Because of a problem while trying to save the export file, the export data was lost. %s</string>
    <string name="dryRun">BTW&#8230; this app is not toggled to insert SMS messages right now. This will be a dry run.</string>
    <string name="nofileselected">No file selected</string>
    <string name="nocompatiblepattern">No compatible format</string>
    <string name="noHashInPatternPlease">No hash char in the pattern please</string>
    <string name="preparingWrite">Preparing write for sms # : %d</string>
    <string name="insertedSms">Inserted SMS : %1$d (%2$d duplicate(s) and %3$d failed</string>
    <string name="theSelectedFormatDoesNotWork">The selected format does not work, sorry</string>
    <string name="writingSms">Writing sms : </string>
    <string name="problem_while_writing">Problem during one insertion</string>
    <string name="missingFolderVar">There should be a folder var inside the format pattern ! Please try again.</string>
    <string name="savingthesms">Saving the sms #</string>
    <string name="nosmsimported">I thought it would work but no SMS was valid in this file</string>
    <string name="pickingfrom">"Picking a sms from %s : </string>
    <string name="rate_this_app">Rate this app</string>
    <string name="exportpermissionsarenecessary">Cannot export a single SMS. I must be allowed to do that.</string>
    <string name="conversionpermissionsarenecessary">Cannot import a single SMS entry. I must be allowed to do that.</string>
    <string name="thatsallweknow">That\'s all we know.</string>
    <string name="aborted">Operation was aborted</string>
    <string name="patternmaker">Pattern maker</string>
    <string name="buildhere">Builder :</string>
    <string name="viewhere">Example :</string>
    <string name="build">Here I am !</string>
    <string name="permissions_settings">Permissions settings</string>
    <string name="generex_failed">&lt;problem-with-example&gt;</string>
    <string name="sms_list">Sms list</string>
</resources>
