<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <TextView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:textSize="30sp"
  android:text="@string/failed_retry"/>

    <TextView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:id="@+id/exception"/>

    <Button
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
    android:text="@string/again"
    android:id="@+id/again"/>
    <Button
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
    android:text="@string/exit"
    android:id="@+id/exit"/>
</LinearLayout>
