<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="always">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/buildhere"
        android:textSize="12sp" />
    <org.toilelibre.libe.athg2sms.androidstuff.materialdesign.FlowLayout
        android:id="@+id/builder"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">
        </org.toilelibre.libe.athg2sms.androidstuff.materialdesign.FlowLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/viewhere"
        android:textSize="12sp" />
    <LinearLayout
        android:id="@+id/example"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical"/>

    <Button
        android:id="@+id/build"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build" />
</LinearLayout>