<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/conversionForm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/filename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:width="200dip"
                    android:hint="@string/path"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/selectfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectfile" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/conversionSet"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/conversionFormButtons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/guessconvset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guessconvset"/>

            <ProgressBar
                android:id="@+id/guessing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="invisible"/>
            <Button
                android:id="@+id/toggledefaultapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toggledefaultapp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/current"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:id="@+id/progress" />

        <TextView
            android:id="@+id/inserted"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        app:elevation="4dp"
        android:clickable="true"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp" />

</android.support.design.widget.CoordinatorLayout>
