<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg">
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">
    <LinearLayout 
 xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal">
    <LinearLayout 
 xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">
          <TextView
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:textSize="15sp"
    android:text="@string/editcsname"/><EditText
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:textSize="15sp"
    android:id="@+id/editcsname"/>
    </LinearLayout>
    <TextView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:textSize="20sp"
  android:layout_marginTop="50dip"
    android:text="@+string/edityourPatterns"/>
    <LinearLayout 
 xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">
    <TextView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
    android:text="@+string/inbox"
    android:width="100dip"/>
    <EditText
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:width="200dip" android:singleLine="true"
    android:id="@+id/csinbox"/>
    </LinearLayout>
    <LinearLayout 
 xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">
    <TextView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
    android:text="@+string/sent"
    android:width="100dip"/>
    <EditText
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:width="200dip" android:singleLine="true"
    android:id="@+id/cssent"/>
    </LinearLayout>
</LinearLayout>
	<Button
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
    android:text="@string/modify"
    android:id="@+id/modify"/>
	<Button
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
    android:text="@string/delete"
    android:id="@+id/delete"/>
	<Button
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_marginTop="30dip"
    android:text="@string/cancel"
    android:id="@+id/cancel"/>
</LinearLayout>
</ScrollView>